--- a/app/src/main/res/layout/fragment_details_item.xml
+++ b/app/src/main/res/layout/fragment_details_item.xml
@@ -28,153 +28,148 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <LinearLayout
+            <ImageView
+                android:id="@+id/item_details_photo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#e0e0e0">
-
-                <ImageView
-                    android:id="@+id/item_details_photo"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/content_item_photo"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_camera" />
-
-            </LinearLayout>
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/content_item_photo"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_camera" />
 
         </com.google.android.material.card.MaterialCardView>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/item_details_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="0dp" />
+        app:layout_constraintGuide_percent="0.3" />
 
-    <LinearLayout
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/item_details_guideline_vertical"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
         android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp" />
+
+
+    <!-- Title and price-->
+    <TextView
+        android:id="@+id/item_details_title"
+        style="@style/TextAppearance.MaterialComponents.Headline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:hint="@string/item_title"
+        app:layout_constraintRight_toLeftOf="@id/item_details_dot"
+        app:layout_constraintStart_toStartOf="@id/item_details_guideline_vertical"
+        app:layout_constraintTop_toBottomOf="@id/item_details_guideline" />
+
+    <TextView
+        android:id="@+id/item_details_dot"
+        style="@style/TextAppearance.MaterialComponents.Subtitle1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/dot"
+        app:layout_constraintBaseline_toBaselineOf="@id/item_details_title"
+        app:layout_constraintLeft_toRightOf="@id/item_details_title"
+        app:layout_constraintRight_toLeftOf="@id/item_details_price"
+        app:layout_constraintStart_toEndOf="@id/item_details_title"/>
+
+    <TextView
+        android:id="@+id/item_details_price"
+        style="@style/TextAppearance.MaterialComponents.Body1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/item_price"
+        app:layout_constraintBottom_toBottomOf="@id/item_details_dot"
+        app:layout_constraintStart_toEndOf="@id/item_details_dot"/>
+
+
+    <TextView
+        android:id="@+id/item_details_description"
+        style="@style/TextAppearance.MaterialComponents.Body1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:drawableStart="@drawable/ic_description"
+        android:drawablePadding="36dp"
+        android:hint="@string/item_description"
+        app:layout_constraintStart_toStartOf="@id/item_details_guideline_vertical"
+        app:layout_constraintTop_toBottomOf="@id/item_details_title" />
+
+    <TextView
+        android:id="@+id/item_details_category_main"
+        style="@style/TextAppearance.MaterialComponents.Body1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:drawableStart="@drawable/ic_bookmark"
+        android:drawablePadding="36dp"
+        android:hint="@string/item_category_main"
+        app:layout_constraintStart_toStartOf="@id/item_details_guideline_vertical"
+        app:layout_constraintTop_toBottomOf="@id/item_details_description" />
+
+    <TextView
+        android:id="@+id/item_details_category_sub"
+        style="@style/TextAppearance.MaterialComponents.Body2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="12dp"
+        android:hint="@string/item_category_sub"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/item_details_category_main"
+        app:layout_constraintTop_toBottomOf="@id/item_details_category_main" />
+
+    <TextView
+        android:id="@+id/item_details_expiry"
+        style="@style/TextAppearance.MaterialComponents.Body1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:drawableStart="@drawable/ic_expiry"
+        android:drawablePadding="36dp"
+        android:hint="@string/item_expiry"
+        app:layout_constraintStart_toStartOf="@id/item_details_guideline_vertical"
+        app:layout_constraintTop_toBottomOf="@id/item_details_category_sub" />
+
+    <TextView
+        android:id="@+id/item_details_extra"
+        style="@style/TextAppearance.MaterialComponents.Body1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:drawableStart="@drawable/ic_profile_primary"
+        android:drawablePadding="36dp"
+        app:layout_constraintStart_toStartOf="@id/item_details_guideline_vertical"
+        app:layout_constraintTop_toBottomOf="@id/item_details_expiry" />
+
+
+    <fragment
+        android:id="@+id/item_location"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintStart_toStartOf="@id/item_details_guideline_vertical"
+        app:layout_constraintTop_toBottomOf="@id/item_details_extra" />
+
+    <ImageView
+        android:id="@+id/item_transparent_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.0"
+        android:contentDescription="@string/content_transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_details_guideline"
-        app:layout_constraintVertical_bias="0.25"
-        app:layout_constraintWidth_max="500dp">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/item_details_title"
-                style="@style/TextAppearance.MaterialComponents.Headline6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/item_title" />
-
-            <TextView
-                style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:text="@string/dot" />
-
-            <TextView
-                android:id="@+id/item_details_price"
-                style="@style/TextAppearance.MaterialComponents.Body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:hint="@string/item_price" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/item_details_description"
-            style="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:drawableStart="@drawable/ic_description"
-            android:drawablePadding="36dp"
-            android:hint="@string/item_description" />
-
-        <TextView
-            android:id="@+id/item_details_category_main"
-            style="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:drawableStart="@drawable/ic_bookmark"
-            android:drawablePadding="36dp"
-            android:hint="@string/item_category_main" />
-
-        <TextView
-            android:id="@+id/item_details_category_sub"
-            style="@style/TextAppearance.MaterialComponents.Body2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:hint="@string/item_category_sub"
-            android:paddingStart="60dp" />
-
-        <TextView
-            android:id="@+id/item_details_expiry"
-            style="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:drawableStart="@drawable/ic_expiry"
-            android:drawablePadding="36dp"
-            android:hint="@string/item_expiry" />
-
-        <TextView
-            android:id="@+id/item_details_extra"
-            style="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:drawableStart="@drawable/ic_profile_primary"
-            android:drawablePadding="36dp" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="32dp">
-
-            <fragment
-                android:id="@+id/item_location"
-                android:name="com.google.android.gms.maps.SupportMapFragment"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/item_transparent_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:alpha="0.0"
-                android:contentDescription="@string/content_transparent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
